<resources>
    <string name="app_name">BILoved</string>
    <string name="Name">Name:</string>
    <string name="Age">Age:</string>
    <string name="Im_from">I am from:</string>
    <string name="About_me">About me:</string>
    <string name="Log_out">Logout</string>
    <string name="Save_changes">Save changes</string>
    <string name="Gender">Gender:</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Swipe">Swipe</string>
    <string name="Matches">Matches</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="Email">Email:</string>
    <string name="Password">Password:</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Enter_mail_here">Enter mail here</string>
    <string name="Enter_password_here">Enter password here</string>
    <string name="Send">Send</string>
    <string name="Type_a_message">Type a message</string>
    <string name="Image_uploaded">Image uploaded</string>
    <string name="Write_msg">Write a message first</string>
    <string name="Error_sending">Error sending message</string>
    <string name="click_to_add">Click the + button and add a picture</string>
    <string name="Picture_deleted">Picture deleted</string>
    <string name="want_delete">Are you sure you want to delete the picture?</string>
    <string name="unmatch">Are you sure you want to unmatch?</string>
    <string name="profile_saved">Profile saved</string>
    <string name="fill_details">Please fill all the details</string>
    <string name="sign_in_compl">Sign in completed</string>
    <string name="sign_in_fail">Sign in failed, please try again</string>
    <string name="register_compl">Register completed</string>
    <string name="register_fail">Registration failed, please try again</string>
    <string name="first_fill_profile">Please first fill your profile details</string>
    <string name="first_register">Please register first</string>
    <string name="welcome_guest">Welcome guest!</string>
    <string name="try_again">Please try again</string>
    <string name="select_img">Select image from here</string>
    <string name="no_more_users">There are no more users to show:(</string>
    <string name="new_match">New match</string>
    <string name="new_match_msg">You have a new match, go check!</string>
    <string name="msg_sent">Message sent</string>
    <string name="guest">Im just a guest</string>
    <string name="been_unmatched">This user unmatched you :(</string>
    <string name="msg_from">messaged you</string>
    <string name="yes">Yes</string>

</resources>