<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_container3"
    android:background="@drawable/img"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:padding="5dp"
                android:text="@string/Log_out"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/picture_edit_btn"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:background="@null"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:src="@drawable/person_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/gender_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Gender"
                android:textColor="@color/purple_ish"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/Male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/Female" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Name"
                android:textColor="@color/purple_ish"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:background="@color/browser_actions_bg_grey"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/age_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Age"
                android:textColor="@color/purple_ish"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/age"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:background="@color/browser_actions_bg_grey"
                android:digits="0123456789"
                android:padding="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Im_from"
                android:textColor="@color/purple_ish"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/city"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="22dp"
                android:background="@color/browser_actions_bg_grey"
                android:padding="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/bio_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/About_me"
                android:textColor="@color/purple_ish"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/browser_actions_bg_grey"
                android:padding="5dp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_changes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_selector"
            android:text="@string/Save_changes"
            android:textColor="@color/black" />

    </LinearLayout>
</RelativeLayout>
