<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/browser_actions_bg_grey"
    android:id="@+id/root_container4"
    >

    <LinearLayout
        android:id="@+id/nameBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_ish"
        android:gravity="center">

        <ImageView
            android:id="@+id/match_pic"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="2dp"/>

        <TextView
            android:id="@+id/match_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:paddingStart="5dp"
            android:text="@string/Name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/messagesBoard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sendBar"
        android:layout_below="@id/nameBar"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sendBar"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/purple_ish"
        >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:layout_weight="0.8"
            android:hint="@string/Type_a_message"
            android:layout_margin="1.5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:text="@string/Send"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/send"
            android:adjustViewBounds="false"
            android:background="@drawable/shape_selector"/>

    </LinearLayout>

</RelativeLayout>